just enter space and so on

--- a/debhelper/ja.po
+++ b/debhelper/ja.po
@@ -5,7 +5,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: 9.20120608\n"
+"Project-Id-Version: debhelper 9.20120909\n"
 "POT-Creation-Date: 2012-11-03 11:07-0400\n"
 "PO-Revision-Date: 2013-02-10 11:55+0900\n"
 "Last-Translator: Takahide Nojima <nozzy123nozzy@gmail.com>\n"
@@ -1826,7 +1826,7 @@ msgid ""
 "This is a very simple rules file, for packages where the default sequences "
 "of commands work with no additional options."
 msgstr ""
-"以下は非常に簡単なrulesファイルです。ここでは、追加オプション無しで、かつ、特"
+"以下は非常にシンプルな rules ファイルです。ここでは追加オプション無しで、かつ特"
 "に指定が無い場合に呼び出される一連のコマンドが呼び出され、パッケージに対して"
 "処理が行われます。"
 
@@ -1850,7 +1850,7 @@ msgid ""
 "Often you'll want to pass an option to a specific debhelper command. The "
 "easy way to do with is by adding an override target for that command."
 msgstr ""
-"特定のdebhelperコマンドへオプションを渡したい事がよくあります。こちらを行う簡"
+"特定の debhelper コマンドへオプションを渡したい事がよくあります。こちらを行う簡"
 "単な方法は、オプション渡したいコマンドに関する上書きターゲットに記載する事に"
 "より行います。"
 
@@ -1899,9 +1899,9 @@ msgid ""
 "can't guess what to do for a strange package. Here's how to avoid running "
 "either and instead run your own commands."
 msgstr ""
-"L<dh_auto_configure(1)>やL<dh_auto_build(1)>が処理をする際、何を処理すればよ"
+"L<dh_auto_configure(1)> や L<dh_auto_build(1)> が処理をする際、何を処理すればよ"
 "いか判断できないような変わったパッケージがたまに存在します。ここでは、"
-"L<dh_auto_configure(1)>やL<dh_auto_build(1)>を実行せずに、代わりのコマンドを"
+"L<dh_auto_configure(1)> や L<dh_auto_build(1)> を実行せずに、代わりのコマンドを"
 "実行させる方法を示します。 "
 
 #. type: verbatim
@@ -1934,7 +1934,7 @@ msgid ""
 "Another common case is wanting to do something manually before or after a "
 "particular debhelper command is run."
 msgstr ""
-"別のよくある例として、特定のdebhelperコマンドが実行される直前、あるいは、直後"
+"別のよくある例として、特定の debhelper コマンドが実行される直前、あるいは、直後"
 "に手動にて何かしたいような事があります。その場合は以下のようにすると良いで"
 "す。"
 
@@ -1960,9 +1960,9 @@ msgid ""
 "build time, you can use some commands provided in B<autotools-dev> that "
 "automate it, like this."
 msgstr ""
-"もしパッケージがautotoolsを利用しており、パッケージ構築時にF<config.sub>や"
-"F<config.guess>ファイルをより新しいバージョンのB<autotools-dev>で一旦生成しな"
-"おしたい場合があります。この場合、B<autotools-dev>で提供されているコマンドを"
+"もしパッケージが autotools を利用しており、パッケージ構築時に F<config.sub> や"
+"F<config.guess> ファイルをより新しいバージョンの B<autotools-dev> で一旦生成しな"
+"おしたい場合があります。この場合、B<autotools-dev> で提供されているコマンドを"
 "使って処理する事ができます。その場合以下のようにします："
 
 #. type: verbatim
@@ -1986,9 +1986,9 @@ msgid ""
 "that area. (Before compatibility level v9, dh does run B<dh_pysupport>.)  "
 "Here is how to use B<dh_python2>."
 msgstr ""
-"状況は常に変わってはいますが、特に指定無き場合python toolはdhによって起動され"
-"ません (互換性レベルのv9以前であれば、dhはB<dh_pysupport>を起動します。)ここ"
-"では、B<dh_python2>どう使うかを示します:"
+"状況は常に変わってはいますが、特に指定無き場合 python tool は dh によって起動され"
+"ません (互換性レベルの v9 以前であれば、dh は B<dh_pysupport> を起動します。)ここ"
+"では、B<dh_python2> どう使うかを示します:"
 
 #. type: verbatim
 #: dh:141
@@ -2010,8 +2010,8 @@ msgid ""
 "Here is how to force use of Perl's B<Module::Build> build system, which can "
 "be necessary if debhelper wrongly detects that the package uses MakeMaker."
 msgstr ""
-"perlによるB<Module::Build>ビルドシステムを無理やり使わせる方法を載せます。こ"
-"れは、debhelperが間違ってパッケージがMakeMakerを使っていると誤認識する場合に"
+"Perl による B<Module::Build> ビルドシステムを無理やり使わせる方法を載せます。こ"
+"れは、debhelper が間違ってパッケージが MakeMaker を使っていると誤認識する場合に"
 "必要となります。"
 
 #. type: verbatim
@@ -2035,8 +2035,8 @@ msgid ""
 "package's source, for a package where the source is located in a "
 "subdirectory."
 msgstr ""
-"以下にB<dh_auto_>I<*>コマンドがどこにパッケージソースがあるかを変更する例を載"
-"せます。これはサブディレクトリにソースが存在するようなパッケージで使います："
+"以下に B<dh_auto_>I<*> コマンドがどこにパッケージソースがあるかを変更する例を載"
+"せます。これはサブディレクトリにソースが存在するようなパッケージで使います:"
 
 #. type: verbatim
 #: dh:157
@@ -2058,8 +2058,8 @@ msgid ""
 "And here is an example of how to tell the B<dh_auto_>I<*> commands to build "
 "in a subdirectory, which will be removed on B<clean>."
 msgstr ""
-"B<dh_auto_>I<*>にサブディレクトリで構築するように指定する方法を以下に示しま"
-"す。こちらを指定すると、B<clean>手続きでこれらディレクトリが取り除かれるよう"
+"B<dh_auto_>I<*> にサブディレクトリで構築するように指定する方法を以下に示しま"
+"す。こちらを指定すると、B<clean> 手続きでこれらディレクトリが取り除かれるよう"
 "になります："
 
 #. type: verbatim
@@ -2106,7 +2106,7 @@ msgid ""
 "Here is a way to prevent B<dh> from running several commands that you don't "
 "want it to run, by defining empty override targets for each command."
 msgstr ""
-"ここでは、B<dh>に、実行してほしくないコマンドを実行させないようにする方法を示"
+"ここでは、B<dh> に、実行してほしくないコマンドを実行させないようにする方法を示"
 "します。その場合、それらコマンドに対する上書きターゲットを空にすることにより"
 "行います。"
 
@@ -2131,7 +2131,7 @@ msgid ""
 msgstr ""
 "ドキュメントパッケージを作成するのに時間がかかる場合があります。この場合、"
 "アーキテクチャ非依存用の上書きターゲットを使って構築を分離することができま"
-"す。こうすると、build-archやbinary-archを実行するとき、ドキュメントパッケージ"
+"す。こうすると、build-arch や binary-arch を実行するとき、ドキュメントパッケージ"
 "の構築が省略されます。"
 
 #. type: verbatim
@@ -2154,7 +2154,7 @@ msgid ""
 "\toverride_dh_auto_test-indep:\n"
 "\n"
 msgstr ""
-"\t# docsターゲット実行時はテストは不要\n"
+"\t# doc ターゲット実行時はテストは不要\n"
 "\toverride_dh_auto_test-indep:\n"
 "\n"
 
@@ -2177,7 +2177,7 @@ msgid ""
 "building the architecture dependent package, as it's not present when "
 "building only documentation."
 msgstr ""
-"上の例に加え、ファイルにchmodを発行する必要があるとします。この時、アーキテク"
+"上の例に加え、ファイルに chmod を発行する必要があるとします。この時、アーキテク"
 "チャ依存パッケージを構築する際にのみ実行してほしくて、代わりに文章パッケージ"
 "を構築する時には実行して欲しくないような時に記載すべき内容は以下のとおりで"
 "す。"
@@ -2207,7 +2207,7 @@ msgid ""
 "If you're curious about B<dh>'s internals, here's how it works under the "
 "hood."
 msgstr ""
-"B<dh>の内部動作に興味がある人向けに、以下に内部でどう動作しているのかを記載し"
+"B<dh> の内部動作に興味がある人向けに、以下に内部でどのように動作しているのかを記載し"
 "ます。"
 
 #. type: textblock
@@ -2218,8 +2218,8 @@ msgid ""
 "commands have already been run, for which packages, and skip running those "
 "commands again."
 msgstr ""
-"debhelperコマンドはF<debian/package.debhelper.log>に実行がうまく行ったものを"
-"記録します (B<dh_clean>により消去されますが。) B<dh>により、すでにどんなコマ"
+"debhelper コマンドは F<debian/package.debhelper.log> に実行がうまく行ったものを"
+"記録します (B<dh_clean> により消去されますが。) B<dh> により、すでにどんなコマ"
 "ンドが実行されたか、あるいは、どんなパッケージに対して実行されたか、何のコマ"
 "ンドを再びスキップすればよいのかを知る事ができます。"
 
@@ -2231,9 +2231,9 @@ msgid ""
 "command in the sequence. The B<--until>, B<--before>, B<--after>, and B<--"
 "remaining> options can override this behavior."
 msgstr ""
-"B<dh>が動作すると、ログを検査し、指定された一連の処理にてどんなコマンドが最後"
+"B<dh> が動作すると、ログを検査し、指定された一連の処理にてどんなコマンドが最後"
 "に実行されたと記録されているかを調べます。そして、次に実行すべきコマンドを実"
-"行します。 B<--until>、B<--before>、B<--after>、B<--remaining>オプションによ"
+"行します。 B<--until>, B<--before>, B<--after>, B<--remaining> オプションによ"
 "り、この振る舞いを変更できます。"
 
 #. type: textblock
@@ -2242,9 +2242,9 @@ msgid ""
 "A sequence can also run dependent targets in debian/rules.  For example, the "
 "\"binary\" sequence runs the \"install\" target."
 msgstr ""
-"dhに処理の流れの名前を指定することにより、debian/rulesに記載した依存関係にあ"
-"るターゲットも実行されます。例えば、\"binary\"という処理の流れを指定する"
-"と、\"install\"ターゲットも実行されます。"
+"dhに処理の流れの名前を指定することにより、debian/rules に記載した依存関係にあ"
+"るターゲットも実行されます。例えば、\"binary\" という処理の流れを指定する"
+"と、\"install\" ターゲットも実行されます。"
 
 #. type: textblock
 #: dh:227
@@ -2254,10 +2254,10 @@ msgid ""
 "targets. The contents (and indeed, existence) of this environment variable, "
 "as the name might suggest, is subject to change at any time."
 msgstr ""
-"B<dh>は、B<DH_INTERNAL_OPTIONS> 環境変数をチェックし、上書き用ターゲットの中"
-"で実行されるdebhelperコマンドに情報を引き渡します。この環境変数に記載されてい"
+"B<dh> は、B<DH_INTERNAL_OPTIONS> 環境変数をチェックし、上書き用ターゲットの中"
+"で実行される debhelper コマンドに情報を引き渡します。この環境変数に記載されてい"
 "る内容 (実際には、環境変数が存在していると) 、その環境変数の名前が示唆すると"
-"おり、いつでもdebhelperコマンドの動作に影響を与えます。"
+"おり、いつでも debhelper コマンドの動作に影響を与えます。"
 
 #. type: textblock
 #: dh:232
@@ -2268,10 +2268,10 @@ msgid ""
 "B<install-arch> and B<binary-arch> sequences are passed the B<-a> option to "
 "ensure they only work on architecture dependent packages."
 msgstr ""
-"B<build-indep>、B<install-indep>、B<binary-indep>の一連の処理に記載されている"
+"B<build-indep>, B<install-indep>, B<binary-indep> の一連の処理に記載されている"
 "コマンドには、アーキテクチャ非依存パッケージを構築する時にだけ確実に作用する"
-"ようにB<-i>オプションを使って情報が引き渡されます。B<build-arch>、B<install-"
-"arch>、B<binary-arch>の一連の処理に対しては、B<-a>にて引き渡され、アーキテク"
+"ように B<-i> オプションを使って情報が引き渡されます。B<build-arch>, B<install-"
+"arch>, B<binary-arch> の一連の処理に対しては、B<-a> にて引き渡され、アーキテク"
 "チャ依存パッケージにのみ確実に作用するように動作します。 "
 
 #. type: =head1
@@ -2297,7 +2297,7 @@ msgstr "B<--until> I<cmd>"
 #: dh:247
 msgid "Run commands in the sequence until and including I<cmd>, then stop."
 msgstr ""
-"処理中、I<cmd>で指定されたコマンドに遭遇するまで実行し、最後にI<cmd>を実行し"
+"処理中、I<cmd> で指定されたコマンドに遭遇するまで実行し、最後に I<cmd> を実行し"
 "て停止します。"
 
 #. type: =item
@@ -2309,7 +2309,7 @@ msgstr "B<--before> I<cmd>"
 #: dh:251
 msgid "Run commands in the sequence before I<cmd>, then stop."
 msgstr ""
-"処理中、I<cmd>で指定されたコマンドに遭遇するまで実行し、最後にI<cmd>を実行せ"
+"処理中、I<cmd> で指定されたコマンドに遭遇するまで実行し、最後に I<cmd> を実行せ"
 "ずに停止します。"
 
 #. type: =item
@@ -2340,7 +2340,7 @@ msgid ""
 "the name, to avoid any ambiguity. If there are multiple substring matches, "
 "the last one in the sequence will be used."
 msgstr ""
-"以上のオプションでは、I<cmd> はdebhelperコマンドの完全な名前を指定するか、そ"
+"以上のオプションでは、I<cmd> は debhelper コマンドの完全な名前を指定するか、そ"
 "の一部の名前を指定することになります。あいまいさを排除するため、最初に完全な"
 "名前で検索が行われます。名前が名前の一部で指定の場合に、複数の候補が見つかる"
 "ことがありますが、その場合は処理の一連の流れの中で一番最後に見つかったものが"
@@ -2380,12 +2380,12 @@ msgstr "L<debhelper(7)>"
 #: dh_scrollkeeper:32 dh_shlibdeps:179 dh_strip:246 dh_suidregister:121
 #: dh_testdir:48 dh_testroot:31 dh_undocumented:32 dh_usrlocal:118
 msgid "This program is a part of debhelper."
-msgstr "このプログラムはdebhelperの一部です。"
+msgstr "このプログラムは debhelper の一部です。"
 
 #. type: textblock
 #: dh_auto_build:5
 msgid "dh_auto_build - automatically builds a package"
-msgstr "dh_auto_build - パッケージの自動的な構築を行います"
+msgstr "dh_auto_build - 自動的にパッケージをビルドします"
 
 #. type: textblock
 #: dh_auto_build:14
@@ -2405,11 +2405,11 @@ msgid ""
 "done by running B<make> (or B<MAKE>, if the environment variable is set). If "
 "there's a F<setup.py>, or F<Build.PL>, it is run to build the package."
 msgstr ""
-"B<dh_auto_build>は、パッケージを自動的に構築しようとするdebhelperプログラムと"
+"B<dh_auto_build> は、パッケージを自動的に構築しようとする debhelper プログラムと"
 "なります。パッケージが利用していると判断したビルドシステムの適切なコマンドを"
-"実行することにより構築を行います。例えばもしF<Makefile>が見つかるような事があ"
-"れば、B<make>を実行することにより処理を行います (あるいは、B<MAKE>環境変数が"
-"設定されている場合です。) F<setup.py>が存在する、あるいはF<Build.PL>が存在す"
+"実行することにより構築を行います。例えばもし F<Makefile> が見つかるような事があ"
+"れば、B<make> を実行することにより処理を行います (あるいは B<MAKE> 環境変数が"
+"設定されている場合です。) F<setup.py> が存在する、または F<Build.PL> が存在す"
 "れば、これらファイルが実行されます。"
 
 #. type: textblock
@@ -2419,8 +2419,8 @@ msgid ""
 "you're encouraged to skip using B<dh_auto_build> at all, and just run the "
 "build process manually."
 msgstr ""
-"本コマンドは約90%のパッケージについて処理が行えるようにしています。もしうまく"
-"動作しないようなパッケージに遭遇した場合は、B<dh_auto_build>を完全に省略し"
+"本コマンドは約 90% のパッケージについて処理が行えるようにしています。もしうまく"
+"動作しないようなパッケージに遭遇した場合は、B<dh_auto_build> を完全に省略し"
 "て、手動で構築手続きを指定するようにしてください。"
 
 #. type: textblock
@@ -2430,7 +2430,7 @@ msgid ""
 "See L<debhelper(7)/B<BUILD SYSTEM OPTIONS>> for a list of common build "
 "system selection and control options."
 msgstr ""
-"L<debhelper(7)/B<ビルドシステム用オプション>>には、よく使われるビルドシステム"
+"L<debhelper(7)/B<ビルドシステム用オプション>> には、よく使われるビルドシステム"
 "と、制御オプションが列挙されています。"
 
 #. type: =item
@@ -2446,8 +2446,8 @@ msgid ""
 "Pass I<params> to the program that is run, after the parameters that "
 "B<dh_auto_build> usually passes."
 msgstr ""
-"I<params>をB<dh_autobuild>にて実行しようとしているプログラムへ引き渡します。"
-"このB<-->の後に指定したパラメタが引き渡されます。"
+"I<params> を B<dh_autobuild> にて実行しようとしているプログラムへ引き渡します。"
+"この B<--> の後に指定したパラメタが引き渡されます。"
 
 #. type: textblock
 #: dh_auto_clean:5
@@ -2474,13 +2474,13 @@ msgid ""
 "variable is set). If there is a F<setup.py> or F<Build.PL>, it is run to "
 "clean the package."
 msgstr ""
-"B<dh_auto_clean>はパッケージが構築完了後に自動的にディレクトリを消去しようと"
-"するdebhelprプログラムです。このプログラムはパッケージの構築に必要なビルドシ"
+"B<dh_auto_clean> はパッケージが構築完了後に自動的にディレクトリを消去しようと"
+"する debhelpr プログラムです。このプログラムはパッケージの構築に必要なビルドシ"
 "ステムを割り出し、こちらに適したコマンドを実行する事により消去を行います。例"
-"えば、F<Makefile>が存在し、かつ、そのファイルの中にB<distclean>、"
-"B<realclean>、B<clean>ターゲットが存在する場合、B<make>を起動することにより消"
-"去を行います (あるいは、B<MAKE>環境変数が設定されている時も同様です。) もし"
-"F<setup.py>や、F<Build.PL>が存在するのであれば、これらを起動してパッケージビ"
+"えば、F<Makefile> が存在し、かつ、そのファイルの中に B<distclean>, "
+"B<realclean>, B<clean> ターゲットが存在する場合、B<make> を起動することにより消"
+"去を行います (あるいは、B<MAKE> 環境変数が設定されている時も同様です。) もし "
+"F<setup.py> や F<Build.PL> が存在するのであれば、これらを起動してパッケージビ"
 "ルドディレクトリを消去します。"
 
 #. type: textblock
@@ -2490,9 +2490,9 @@ msgid ""
 "tries to use the wrong clean target, you're encouraged to skip using "
 "B<dh_auto_clean> at all, and just run B<make clean> manually."
 msgstr ""
-"本コマンドは約90%のパッケージにて動作するように作られています。もし、うまく動"
+"本コマンドは約 90 %のパッケージにて動作するように作られています。もし、うまく動"
 "作しないようなパッケージに遭遇した場合、間違ったcleanターゲットを使おうとして"
-"しまうような場合、B<dh_auto_clean> を使うのを止め、B<makeclean>を自分で記載し"
+"しまうような場合、B<dh_auto_clean> を使うのを止め、B<makeclean> を自分で記載し"
 "て呼び出すことを勧めます。"
 
 #. type: textblock
@@ -2501,11 +2501,12 @@ msgid ""
 "Pass I<params> to the program that is run, after the parameters that "
 "B<dh_auto_clean> usually passes."
 msgstr ""
-"I<params>を起動するプログラムに引き渡すには、B<dh_auto_clean>に通常指定するパ"
-"ラメタの後に、B<-->を指定してI<params>を指定するように願います。"
+"I<params> を起動するプログラムに引き渡すには、B<dh_auto_clean> に通常指定するパ"
+"ラメタの後に、B<--> を指定して I<params> を指定するように願います。"
 
 #. type: textblock
 #: dh_auto_configure:5
+#, fuzzy
 msgid "dh_auto_configure - automatically configure a package prior to building"
 msgstr "dh_auto_configure - パッケージ構築前に自動的にconfigure行います"
 
