--- a/sysstat/ja.po
+++ b/sysstat/ja.po
@@ -6,10 +6,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: sysstat 10.1.3\n"
+"Project-Id-Version: sysstat 10.1.4\n"
 "Report-Msgid-Bugs-To: sysstat <at> orange.fr\n"
 "POT-Creation-Date: 2013-03-03 15:47+0100\n"
-"PO-Revision-Date: 2013-01-05 08:17+0900\n"
+"PO-Revision-Date: 2013-03-10 21:45+0900\n"
 "Last-Translator: Hideki Yamane <henrich@debian.or.jp>\n"
 "Language-Team: Japanese <translation-team-ja@lists.sourceforge.net>\n"
 "Language: ja\n"
@@ -231,12 +231,7 @@ msgid "Requested activities not available in file %s\n"
 msgstr "要求された動作情報はファイル %s 内にはありません\n"
 
 #: pidstat.c:85
-#, fuzzy, c-format
-#| msgid ""
-#| "Options are:\n"
-#| "[ -d ] [ -h ] [ -I ] [ -l ] [ -r ] [ -s ] [ -t ] [ -u ] [ -V ]\n"
-#| "[ -w ] [ -C <command> ] [ -p { <pid> [,...] | SELF | ALL } ]\n"
-#| "[ -T { TASK | CHILD | ALL } ]\n"
+#, c-format
 msgid ""
 "Options are:\n"
 "[ -d ] [ -h ] [ -I ] [ -l ] [ -r ] [ -s ] [ -t ] [ -U [ username ] ] [ -u ]\n"
@@ -244,8 +239,8 @@ msgid ""
 "[ -T { TASK | CHILD | ALL } ]\n"
 msgstr ""
 "利用可能なオプション:\n"
-"[ -d ] [ -h ] [ -I ] [ -l ] [ -r ] [ -s ] [ -t ] [ -u ] [ -V ]\n"
-"[ -w ] [ -C <コマンド> ] [ -p { <pid> [,...] | SELF | ALL } ]\n"
+"[ -d ] [ -h ] [ -I ] [ -l ] [ -r ] [ -s ] [ -t ] [ -U [ ユーザー名 ] ] [ -u ]\n"
+"[ -V ] [ -w ] [ -C <コマンド> ] [ -p { <pid> [,...] | SELF | ALL } ]\n"
 "[ -T { TASK | CHILD | ALL } ]\n"
 
 #: pidstat.c:215 sar.c:1033
